<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:id="@+id/viewActionBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/imgRegisterBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/colorPrimary"
            android:padding="0dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/titleRegister"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgRead"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/viewActionBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/read" />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_below="@id/imgRead"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        style="@style/txtRegister"/>

    <EditText
        android:id="@+id/editEmail"
        style="@style/editRegister"
        android:layout_below="@id/txtEmail" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_below="@id/editEmail"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        style="@style/txtRegister"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_below="@id/txtUsername"
        style="@style/editRegister"/>

    <TextView
        android:id="@+id/txtPhone"
        android:layout_below="@id/editUsername"
        android:layout_marginTop="10dp"
        android:text="@string/phone"
        style="@style/txtRegister"/>

    <EditText
        android:id="@+id/editphone"
        android:layout_below="@id/txtPhone"
        style="@style/editRegister"/>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_below="@id/editphone"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        style="@style/txtRegister"/>

    <EditText
        android:id="@+id/editPassword"
        style="@style/editRegister"
        android:layout_below="@id/txtPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_border"
        android:text="Đăng ký"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>