<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@id/view"
        android:background="@drawable/ic_wave" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/news"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgRead"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view2"
        android:src="@drawable/read"/>

    <EditText
        android:id="@+id/inputEmail"
        style="@style/editTextLogin"
        android:layout_below="@id/imgRead"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="Email"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputEmail"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:hint="Mật khẩu"
        style="@style/editTextLogin"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/forgotPasswword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="Quên mật khẩu?"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/ortextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="OR"
        android:layout_below="@id/forgotPasswword"
        android:textColor="#6A5D60"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/facebookLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/ortextview"
        android:layout_marginTop="25dp"
        android:layout_marginRight="40dp"
        android:layout_toLeftOf="@id/googleLogin"
        android:layout_weight="1"
        app:srcCompat="@drawable/fb" />

    <ImageView
        android:id="@+id/googleLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/ortextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/zaloLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/ortextview"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/googleLogin"
        android:layout_weight="1"
        app:srcCompat="@drawable/zalo" />

    <TextView
        android:id="@+id/gotoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>
